src/test/ui/object-safety/object-safety-associated-consts.curr.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-associated-consts.rs:12:30
   |
LL | trait Bar {
   |       --- this trait cannot be made into an object...
LL |     const X: usize;
   |           - ...because it contains this associated `const`
...
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   |                              ^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = help: consider moving `X` to another trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
